# nastran-pch2csv

./: .gitignore  CMakeLists.txt  README.md  doxyfile  pch2csv.pro  version.pri
deployment/: README.txt  example.pch
images/: combo.dia  concat.dia  formats.dia  unique.dia
include/: CSVComparer.h  FileManager.h  PunchFile.h  Reader.h  Writer.h
include/Utils/: CSVComparer.h  TestSuite.h
src/: config.h.cmake  filemanager.cpp  filemanager.h  main.cpp  pch2csv.pro  punchfile.cpp  punchfile.h  qsystemdetection.h  reader.cpp  reader.h  version.h  writer.cpp  writer.h
test/: README.md  test.pro
test/csvcomparer/: csvcomparer.cpp  csvcomparer.pro  tst_csvcomparer.cpp
test/filemanager/: filemanager.pro  tst_filemanager.cpp
test/scanner/: scanner.cpp  scanner.h  scanner.pro  tst_scanner.cpp
utils/: csvcomparer.cpp  csvcomparer.h  testsuite.cpp  testsuite.h
